ubah hapi ke express

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/me.png" rel="icon">
-  <link href="assets/img/me.png" rel="me">
+  <link href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/me.png" rel="icon">
+  <link href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/me.png" rel="me">
 
   <!-- Google Fonts -->
   <link
@@ -55,7 +55,7 @@
     body::before {
       content: "";
       position: fixed;
-      background: #040404 url("assets/img/bg.png") top right no-repeat;
+      background: #040404 url("https://storage.googleapis.com/aplikasi-profile-1.appspot.com/bg.png") top right no-repeat;
       background-size: cover;
       left: 0;
       right: 0;
@@ -1287,7 +1287,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.png" class="img-fluid" alt="">
+          <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/me.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Junior Web Developer</h3>
@@ -1534,7 +1534,7 @@
                 quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+              <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
               <h3>Saul Goodman</h3>
               <h4>Ceo &amp; Founder</h4>
             </div>
@@ -1548,7 +1548,7 @@
                 quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+              <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
               <h3>Sara Wilsson</h3>
               <h4>Designer</h4>
             </div>
@@ -1562,7 +1562,7 @@
                 labore quem eram duis noster aute amet eram fore quis sint minim.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+              <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
               <h3>Jena Karlis</h3>
               <h4>Store Owner</h4>
             </div>
@@ -1576,7 +1576,7 @@
                 dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+              <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
               <h3>Matt Brandon</h3>
               <h4>Freelancer</h4>
             </div>
@@ -1590,7 +1590,7 @@
                 labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+              <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
               <h3>John Larson</h3>
               <h4>Entrepreneur</h4>
             </div>
@@ -1757,12 +1757,12 @@
 
         <div class="col-lg-4 col-md-6 galery-item filter-app">
           <div class="galery-wrap">
-            <img src="assets/img/galery/galery-1.jpg" class="img-fluid" alt="">
+            <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-1.jpg" class="img-fluid" alt="">
             <div class="galery-info">
               <h4>Yun Jin</h4>
               <p>Polearm</p>
               <div class="galery-links">
-                <a href="assets/img/galery/galery-1.jpg" data-gallery="cosplayGalery"
+                <a href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-1.jpg" data-gallery="cosplayGalery"
                   class="galery-lightbox" title="Yun Jin"><i class="bx bx-plus"></i></a>
                 <a href="#" data-gallery="cosplayDetailsGallery" data-glightbox="type: external"
                   class="galery-details-lightbox" title="Galery Details"><i class="bx bx-link"></i></a>
@@ -1773,12 +1773,12 @@
 
         <div class="col-lg-4 col-md-6 galery-item filter-web">
           <div class="galery-wrap">
-            <img src="assets/img/galery/galery-2.jpg" class="img-fluid" alt="">
+            <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-2.jpg" class="img-fluid" alt="">
             <div class="galery-info">
               <h4>Keqing</h4>
               <p>Sword</p>
               <div class="galery-links">
-                <a href="assets/img/galery/galery-2.jpg" data-gallery="cosplayGalery"
+                <a href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-2.jpg" data-gallery="cosplayGalery"
                   class="galery-lightbox" title="Keqing"><i class="bx bx-plus"></i></a>
                 <a href="#" data-gallery="cosplayDetailsGallery" data-glightbox="type: external"
                   class="galery-details-lightbox" title="Galery Details"><i class="bx bx-link"></i></a>
@@ -1789,12 +1789,12 @@
 
         <div class="col-lg-4 col-md-6 galery-item filter-app">
           <div class="galery-wrap">
-            <img src="assets/img/galery/galery-3.jpg" class="img-fluid" alt="">
+            <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-3.jpg" class="img-fluid" alt="">
             <div class="galery-info">
               <h4>Kamisato Ayaka</h4>
               <p>Sword</p>
               <div class="galery-links">
-                <a href="assets/img/galery/galery-3.jpg" data-gallery="cosplayGalery"
+                <a href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-3.jpg" data-gallery="cosplayGalery"
                   class="galery-lightbox" title="Kamisato Ayaka"><i class="bx bx-plus"></i></a>
                 <a href="#" data-gallery="cosplayDetailsGallery" data-glightbox="type: external"
                   class="galery-details-lightbox" title="Galery Details"><i class="bx bx-link"></i></a>
@@ -1805,12 +1805,12 @@
 
         <div class="col-lg-4 col-md-6 galery-item filter-card">
           <div class="galery-wrap">
-            <img src="assets/img/galery/galery-4.jpg" class="img-fluid" alt="">
+            <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-4.jpg" class="img-fluid" alt="">
             <div class="galery-info">
               <h4>Lisa</h4>
               <p>Catalyst</p>
               <div class="galery-links">
-                <a href="assets/img/galery/galery-4.jpg" data-gallery="cosplayGalery"
+                <a href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-4.jpg" data-gallery="cosplayGalery"
                   class="galery-lightbox" title="Lisa"><i class="bx bx-plus"></i></a>
                 <a href="#" data-gallery="cosplayDetailsGallery" data-glightbox="type: external"
                   class="galery-details-lightbox" title="Galery Details"><i class="bx bx-link"></i></a>
@@ -1821,12 +1821,12 @@
 
         <div class="col-lg-4 col-md-6 galery-item filter-web">
           <div class="galery-wrap">
-            <img src="assets/img/galery/galery-5.jpg" class="img-fluid" alt="">
+            <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-5.jpg" class="img-fluid" alt="">
             <div class="galery-info">
               <h4>Kamisato Ayato</h4>
               <p>Sword</p>
               <div class="galery-links">
-                <a href="assets/img/galery/galery-5.jpg" data-gallery="cosplayGalery"
+                <a href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-5.jpg" data-gallery="cosplayGalery"
                   class="galery-lightbox" title="Kamisato Ayato"><i class="bx bx-plus"></i></a>
                 <a href="#" data-gallery="cosplayDetailsGallery" data-glightbox="type: external"
                   class="galery-details-lightbox" title="Galery Details"><i class="bx bx-link"></i></a>
@@ -1837,12 +1837,12 @@
 
         <div class="col-lg-4 col-md-6 galery-item filter-app">
           <div class="galery-wrap">
-            <img src="assets/img/galery/galery-6.jpg" class="img-fluid" alt="">
+            <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-6.jpg" class="img-fluid" alt="">
             <div class="galery-info">
               <h4>Raiden Shogun</h4>
               <p>Polearm</p>
               <div class="galery-links">
-                <a href="assets/img/galery/galery-6.jpg" data-gallery="cosplayGalery"
+                <a href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-6.jpg" data-gallery="cosplayGalery"
                   class="galery-lightbox" title="Raiden Shogun"><i class="bx bx-plus"></i></a>
                 <a href="#" data-gallery="cosplayDetailsGallery" data-glightbox="type: external"
                   class="galery-details-lightbox" title="Galery Details"><i class="bx bx-link"></i></a>
@@ -1853,12 +1853,12 @@
 
         <div class="col-lg-4 col-md-6 galery-item filter-card">
           <div class="galery-wrap">
-            <img src="assets/img/galery/galery-7.jpg" class="img-fluid" alt="">
+            <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-7.jpg" class="img-fluid" alt="">
             <div class="galery-info">
               <h4>Raiden Shogun & Yae Miko</h4>
               <p>Catalist</p>
               <div class="galery-links">
-                <a href="assets/img/galery/galery-7.jpg" data-gallery="cosplayGalery"
+                <a href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-7.jpg" data-gallery="cosplayGalery"
                   class="galery-lightbox" title="Raiden Shogun & Yae Miko"><i class="bx bx-plus"></i></a>
                 <a href="#" data-gallery="cosplayDetailsGallery" data-glightbox="type: external"
                   class="galery-details-lightbox" title="Galery Details"><i class="bx bx-link"></i></a>
@@ -1869,12 +1869,12 @@
 
         <div class="col-lg-4 col-md-6 galery-item filter-card">
           <div class="galery-wrap">
-            <img src="assets/img/galery/galery-8.jpg" class="img-fluid" alt="">
+            <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-8.jpg" class="img-fluid" alt="">
             <div class="galery-info">
               <h4>Nahida</h4>
               <p>Catalyst</p>
               <div class="galery-links">
-                <a href="assets/img/galery/galery-8.jpg" data-gallery="cosplayGalery"
+                <a href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-8.jpg" data-gallery="cosplayGalery"
                   class="galery-lightbox" title="Nahida"><i class="bx bx-plus"></i></a>
                 <a href="#" data-gallery="cosplayDetailsGallery" data-glightbox="type: external"
                   class="galery-details-lightbox" title="Galery Details"><i class="bx bx-link"></i></a>
@@ -1885,12 +1885,12 @@
 
         <div class="col-lg-4 col-md-6 galery-item filter-web">
           <div class="galery-wrap">
-            <img src="assets/img/galery/galery-9.jpg" class="img-fluid" alt="">
+            <img src="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-9.jpg" class="img-fluid" alt="">
             <div class="galery-info">
               <h4>Post Card</h4>
               <p>Catalyst</p>
               <div class="galery-links">
-                <a href="assets/img/galery/galery-9.jpg" data-gallery="cosplayGalery"
+                <a href="https://storage.googleapis.com/aplikasi-profile-1.appspot.com/galery/galery-9.jpg" data-gallery="cosplayGalery"
                   class="galery-lightbox" title="Post Card"><i class="bx bx-plus"></i></a>
                 <a href="#" data-gallery="cosplayDetailsGallery" data-glightbox="type: external"
                   class="galery-details-lightbox" title="Galery Details"><i class="bx bx-link"></i></a>
